# openAI_wrapper

./: .gitignore  README.md  app.py  config.py  pyproject.toml  test_config.py
templates/: chat.html
